Fix main page navbar collapse issue

--- a/client/src/components/LiveInfoWrapper/LiveInfoWrapper.scss
+++ b/client/src/components/LiveInfoWrapper/LiveInfoWrapper.scss
@@ -48,7 +48,7 @@ $tablet-width: 800px;
     width: 100%;
     height: 500px;
     opacity: 0.7;
-    background-color: #f4f4f4;
+    //background-color: #f4f4f4;
     overflow-y: hidden;
   }
 }
@@ -63,7 +63,7 @@ $tablet-width: 800px;
   padding: 20px 10px 10px;
 
   .liveInfoWrapperContentBox {
-    background-color: white;
+    //background-color: white;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   }
